Wrote some about game engines

--- a/Report/document.tex
+++ b/Report/document.tex
@@ -235,18 +235,20 @@
 
 	\section{Game Engines}
 		
-			Performance of
-				Love2D
-				Unreal 
-				Engine 
-				Unity 
-				Cry Engine 
-				Source (Garrysmod)
-				Game Studio
-				id Tech (5/6?)
-				MonoGame
-				Cocos
-				OGRE	
+		There are many game engines already out there covering a wide range of performance and development styles, engines such as Unreal Engine~\cite{UE} and Unity~\cite{Unity} have integrated development environments and require all development to be done through them. Other game engines, such as LÖVE~\cite{LOVE} can be developed in any text editor using any work flow that the developer chooses, this improves prototyping times and allows developers to get comfortable much quicker as they are using tools that they are well used to.
+
+		Performance of
+			Love2D
+			Unreal 
+			Engine 
+			Unity 
+			Cry Engine 
+			Source (Garrysmod)
+			Game Studio
+			id Tech (5/6?)
+			MonoGame
+			Cocos
+			OGRE	
 	\newpage
 
 	\printbibliography{}
